# FFmpegKit

./: .gitignore  CLAUDE.md  README.md  build.gradle.kts  gradle.properties  jitpack.yml  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/dev/example/ffmpegkit/: ExampleInstrumentedTest.kt
app/src/androidTest/java/io/github/nova/ffmpegkit/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/dev/zqc/ffmpegkit/: MainActivity.kt  MyApp.kt
app/src/main/java/dev/zqc/ffmpegkit/theme/: Background.kt  Color.kt  Theme.kt  Tint.kt  Type.kt
app/src/main/java/io/github/nova/ffmpegkit/: MainActivity.kt  MyApp.kt
app/src/main/java/io/github/nova/ffmpegkit/theme/: Background.kt  Color.kt  Theme.kt  Tint.kt  Type.kt
app/src/main/res/values/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/dev/example/ffmpegkit/: ExampleUnitTest.kt
app/src/test/java/io/github/nova/ffmpegkit/: ExampleUnitTest.kt
ffmpegkit/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
ffmpegkit/src/main/cpp/: native-lib.cpp
ffmpegkit/src/main/java/dev/zqc/ffmpegkit/: FFmpegKit.kt
ffmpegkit/src/main/java/io/github/nova/ffmpegkit/: FFmpegKit.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
